--- a/index.html
+++ b/index.html
@@ -224,7 +224,11 @@
         </article>
 
         <aside id="aside_populaire" class="aside_populaire">
-            <h2 class="titre-section">Les plus populaires <i class="fas fa-chart-line"></i></h2>
+            <div class="populaire__description__wrapper">
+                <h2 class="titre-section">Les plus populaires</h2>
+                <i class="fas fa-chart-line"></i>
+            </div>
+
             <ul class="hotel-cartes">
                 <li>
                     <a href="#">
